hyperdb-api-derive/tests/ui/fail/query_as_missing_args.rs
use hyperdb_api_derive::query_as;

fn main() {
    let _ = query_as!(User); // missing SQL argument
}
